# AgentMesh

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
demo/: README.md  config.yaml  dependency_map.yaml  priority_table.yaml  run_scenario.py
docs/: ARCHITECTURE.md  DEMO_SCENARIO.md  PRD.md  README.md  SYNC_NEEDED_SCHEMA.md  WEBSOCKET_SCHEMA.md
docs/design-system/: colors_and_type.css
docs/design-system/preview/: brand_logo.html  colors_brand.html  colors_neutrals.html  colors_semantic.html  colors_status.html  components_agent_node.html  components_badges.html  components_buttons.html  components_gauge.html  components_inputs.html  components_tool_activity.html  elevation.html  icons.html  radii.html  spacing_scale.html  type_body.html  type_families.html  type_headings.html
docs/design-system/ui_kits/app/: App.jsx  BottomToolbar.jsx  CommandBar.jsx  Inspector.jsx  LeftRail.jsx  index.html  (+6 more)
extension/: .gitignore  README.md  esbuild.mjs  package-lock.json  package.json  tsconfig.json
extension/src/: extension.ts  ws_client.ts
extension/src/types/: events.ts
extension/webview-ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
extension/webview-ui/src/: App.tsx  store.ts  styles.css
mesh/: README.md  __init__.py  __main__.py  cli.py  client.py  conflict.py  dict_store.py  diff_engine.py  mini_agent.py  mock_events.jsonl  router.py  run.py  ws_server.py
mesh/schemas/: __init__.py  events.py  events.schema.json
mesh/tests/: _build_mock_events.py  test_conflict_type_b.py  test_schema_import.py
overlay/: README.md  index.html  live_app.jsx  ws_client.js
(+6 files in other folders)
