[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmesh"
version = "0.1.0"
description = "A deterministic coordination protocol for AI-to-AI communication. File-as-interface, path-addressable state, dual-mechanism conflict resolution."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Ishaan Sirbhaiya" },
  { name = "Abhishek Vulla" },
]
keywords = ["agents", "protocol", "websocket", "multi-agent", "mini-agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

# Pinned per docs/ARCHITECTURE.md §11. No web framework.
dependencies = [
  "watchdog==4.0.2",
  "websockets==13.1",
  "pydantic==2.9.2",
  "pyyaml==6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
]

[project.scripts]
agentmesh = "mesh.cli:main"

[project.urls]
Homepage = "https://github.com/AbhishekVulla/AgentMesh"
Issues   = "https://github.com/AbhishekVulla/AgentMesh/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mesh*", "demo*"]

[tool.setuptools.package-data]
"mesh" = ["mock_events.jsonl", "schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["mesh/tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
